--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kservice-20231103.tar.bz2: 9a396dcb2e152c1bdfe056e2e68b06108227027c
+  kservice-5.245.0.tar.xz: 8d8d44a3046ed0ff529da5ed84bfdd3b20165f1d
