--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kservice-5.249.0.tar.xz: d011f170d6c5676e20e4f269d10329b771ee9f70
+  kservice-20240217.tar.bz2: 7f378362ffa09b54ee62c4ca1be5defcf63aac06
