--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   kservice-20240217.tar.bz2: 7f378362ffa09b54ee62c4ca1be5defcf63aac06
+  kservice-6.0.0.tar.xz: d99fb590d8b774b2524b3e2d96cd7520fc2af35b
